CD/search/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: default
spec:
  selector:
    app: kibana
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  type: ClusterIP
